--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY-GIT-PARAMS"
     }
   },
   "scripts": {
@@ -49,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "12",
     "eslint-config-prettier": "6.15",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
