--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "yarn prettier --write",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "json_server":"json-server"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +55,7 @@
     "@commitlint/config-conventional": "12",
     "eslint-config-prettier": "6.15",
     "husky": "^7.0.4",
+    "json-server": "^0.17.0",
     "lint-staged": "^12.3.4",
     "prettier": "2.5.1"
   },
