--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -29,7 +30,7 @@
     "eject": "react-scripts eject",
     "prettier": "yarn prettier --write",
     "prepare": "husky install",
-    "json_server":"json-server"
+    "json_server": "json-server --watch __json_server_mock__/db.json --port 3003"
   },
   "eslintConfig": {
     "extends": [
