--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "12",
+    "@types/qs": "^6.9.7",
     "eslint-config-prettier": "6.15",
     "husky": "^7.0.4",
     "json-server": "^0.17.0",
