--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "jira-dev-tool": "^1.6.59",
+    "msw": "^0.38.2",
     "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -29,8 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "yarn prettier --write",
-    "prepare": "husky install",
-    "json_server": "json-server --watch __json_server_mock__/db.json --port 3003"
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
