--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.11",
     "antd": "^4.19.1",
     "craco-less": "^2.0.0",
+    "dayjs": "^1.10.8",
     "jira-dev-tool": "^1.6.59",
     "msw": "^0.38.2",
     "qs": "^6.10.3",
