--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.16",
+    "react-router": "6",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
