--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "12",
     "@types/qs": "^6.9.7",
+    "@welldone-software/why-did-you-render": "^6.2.3",
     "eslint-config-prettier": "6.15",
     "husky": "^7.0.4",
     "json-server": "^0.17.0",
