--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^6.4.3",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.16",
+    "react-redux": "^7.2.6",
     "react-router": "6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
@@ -65,6 +67,7 @@
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "12",
     "@types/qs": "^6.9.7",
+    "@types/react-redux": "^7.1.23",
     "@welldone-software/why-did-you-render": "^6.2.3",
     "eslint-config-prettier": "6.15",
     "husky": "^7.0.4",
