--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "msw": "^0.38.2",
     "qs": "^6.10.3",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.16",
     "react-router": "6",
@@ -65,6 +66,7 @@
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "12",
     "@types/qs": "^6.9.7",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@welldone-software/why-did-you-render": "^6.2.3",
     "eslint-config-prettier": "6.15",
     "husky": "^7.0.4",
